--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>BuySmart</title>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" type="text/javascript"></script>
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" type="text/css">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
     <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 
@@ -52,7 +51,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="img/Box1_$10.png">
+                        <img src="images/Box1_$10.png">
                         <h3 id="product-name">Sorting Box</h3>
                         <div class="overlay top">
                             <h4>$10</h4></div>
@@ -61,7 +60,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="img/Box2_$5.png">
+                        <img src="images/Box2_$5.png">
                         <h3 id="product-name">Colored Box</h3>
                         <div class="overlay top">
                             <h4>$5</h4></div>
@@ -70,7 +69,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="img/Clothes2_$30.png">
+                        <img src="images/Clothes2_$30.png">
                         <h3 id="product-name">Shirt</h3>
                         <div class="overlay top">
                             <h4>$20</h4></div>
@@ -81,7 +80,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="img/Clothes1_$20.png">
+                        <img src="images/Clothes1_$20.png">
                         <h3 id="product-name">Dress</h3>
                         <div class="overlay top">
                             <h4>$30</h4></div>
@@ -90,7 +89,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="img/Jeans_$50.png">
+                        <img src="images/Jeans_$50.png">
                         <h3 id="product-name">Jeans</h3>
                         <div class="overlay top">
                             <h4>$50</h4></div>
@@ -99,7 +98,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="img/Keyboard_$20.png">
+                        <img src="images/Keyboard_$20.png">
                         <h3 id="product-name">Keyboard</h3>
                         <div class="overlay top">
                             <h4>$20</h4></div>
@@ -110,7 +109,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="img/Mice_$20.png">
+                        <img src="images/Mice_$20.png">
                         <h3 id="product-name">Mouse</h3>
                         <div class="overlay top">
                             <h4>$20</h4></div>
@@ -119,7 +118,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="img/KeyboardCombo_$40.png">
+                        <img src="images/KeyboardCombo_$40.png">
                         <h3 id="product-name">Keyboard & Mouse</h3>
                         <div class="overlay top">
                             <h4>$40</h4></div>
@@ -128,7 +127,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="img/PC2_$400.png">
+                        <img src="images/PC2_$400.png">
                         <h3 id="product-name">Refurbished PC</h3>
                         <div class="overlay top">
                             <h4>$350</h4></div>
@@ -139,7 +138,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="img/PC1_$350.png">
+                        <img src="images/PC1_$350.png">
                         <h3 id="product-name">Dell PC</h3>
                         <div class="overlay top">
                             <h4>$400</h4></div>
@@ -148,7 +147,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="img/PC3_$300.png">
+                        <img src="images/PC3_$300.png">
                         <h3 id="product-name">Gaming PC</h3>
                         <div class="overlay top">
                             <h4>$400</h4></div>
@@ -157,7 +156,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 product-box">
                     <div class="thumbnail product">
-                        <img src="img/Tent_$100.png">
+                        <img src="images/Tent_$100.png">
                         <h3 id="product-name">Tent</h3>
                         <div class="overlay top">
                             <h4>$100</h4></div>
