--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -8,7 +8,10 @@
     <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <link rel="stylesheet" href="css/products.css" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="js/cart.js"></script>
+    <script src="js/eventHandlers.js"></script>
+    <script src="http://ece.ubc.ca/~gpli/CPEN400A/hw2/test.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -56,11 +59,13 @@
                         <div class="box" style="background: 11px 15px/225px 225px url(images/Box1_$10.png) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
-                            <button id="add-cart" onclick="addToCart('Sorting Box')">Add</button>
-                            <button id="remove-cart" onclick="removeFromCart('Sorting Box')">Remove</button>
+                            <button class="add-cart">Add</button>
+                            <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <h3 id="product-name">Sorting Box</h3>
+                        <!-- Renaming products for sake of automated tests -->
+                        <h3 class="product-name">Box1</h3>
+                        <!-- <h3 class="product-name">Sorting Box</h3> -->
                         <div class="overlay top">
                             <h4>$10</h4>
                         </div>
@@ -72,9 +77,13 @@
                         <div class="box" style="background: 11px 15px/225px 225px url(images/Box2_$5.png) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
+                            <button class="add-cart">Add</button>
+                            <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <h3 id="product-name">Colored Box</h3>
+                        <!-- Renaming products for sake of automated tests -->
+                        <h3 class="product-name">Box2</h3>
+                        <!-- <h3 class="product-name">Colored Box</h3> -->
                         <div class="overlay top">
                             <h4>$5</h4>
                         </div>
@@ -86,9 +95,13 @@
                         <div class="box" style="background: 11px 15px/225px 225px url(images/Clothes2_$30.png) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
+                            <button class="add-cart">Add</button>
+                            <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <h3 id="product-name">Shirt</h3>
+                        <!-- Renaming products for sake of automated tests -->
+                        <h3 class="product-name">Clothes2</h3>
+                        <!-- <h3 class="product-name">Shirt</h3> -->
                         <div class="overlay top">
                             <h4>$20</h4>
                         </div>
@@ -102,9 +115,13 @@
                         <div class="box" style="background: 11px 15px/225px 225px url(images/Clothes1_$20.png) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
+                            <button class="add-cart">Add</button>
+                            <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <h3 id="product-name">Dress</h3>
+                        <!-- Renaming products for sake of automated tests -->
+                        <h3 class="product-name">Clothes1</h3>
+                        <!-- <h3 class="product-name">Dress</h3> -->
                         <div class="overlay top">
                             <h4>$30</h4>
                         </div>
@@ -116,9 +133,13 @@
                         <div class="box" style="background: 11px 15px/225px 225px url(images/Jeans_$50.png) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
+                            <button class="add-cart">Add</button>
+                            <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <h3 id="product-name">Jeans</h3>
+                        <!-- Renaming products for sake of automated tests -->
+                        <h3 class="product-name">Jeans</h3>
+                        <!-- <h3 class="product-name">Jeans</h3> -->
                         <div class="overlay top">
                             <h4>$50</h4>
                         </div>
@@ -130,9 +151,13 @@
                         <div class="box" style="background: 11px 15px/225px 225px url(images/Keyboard_$20.png) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
+                            <button class="add-cart">Add</button>
+                            <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <h3 id="product-name">Keyboard</h3>
+                        <!-- Renaming products for sake of automated tests -->
+                        <h3 class="product-name">Keyboard</h3>
+                        <!-- <h3 class="product-name">Keyboard</h3> -->
                         <div class="overlay top">
                             <h4>$20</h4>
                         </div>
@@ -146,9 +171,13 @@
                         <div class="box" style="background: 11px 15px/225px 225px url(images/Mice_$20.png) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
+                            <button class="add-cart">Add</button>
+                            <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <h3 id="product-name">Mouse</h3>
+                        <!-- Renaming products for sake of automated tests -->
+                        <h3 class="product-name">Mice</h3>
+                        <!-- <h3 class="product-name">Mouse</h3> -->
                         <div class="overlay top">
                             <h4>$20</h4>
                         </div>
@@ -160,9 +189,13 @@
                         <div class="box" style="background: 11px 15px/225px 225px url(images/KeyboardCombo_$40.png) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
+                            <button class="add-cart">Add</button>
+                            <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <h3 id="product-name">Keyboard & Mouse</h3>
+                        <!-- Renaming products for sake of automated tests -->
+                        <h3 class="product-name">KeyboardCombo</h3>
+                        <!-- <h3 class="product-name">Keyboard & Mouse</h3> -->
                         <div class="overlay top">
                             <h4>$40</h4>
                         </div>
@@ -174,9 +207,13 @@
                         <div class="box" style="background: 11px 15px/225px 225px url(images/PC2_$400.png) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
+                            <button class="add-cart">Add</button>
+                            <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <h3 id="product-name">Refurbished PC</h3>
+                        <!-- Renaming products for sake of automated tests -->
+                        <h3 class="product-name">PC2</h3>
+                        <!-- <h3 class="product-name">Refurbished PC</h3> -->
                         <div class="overlay top">
                             <h4>$400</h4>
                         </div>
@@ -190,9 +227,13 @@
                         <div class="box" style="background: 11px 15px/225px 225px url(images/PC1_$350.png) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
+                            <button class="add-cart">Add</button>
+                            <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <h3 id="product-name">Dell PC</h3>
+                        <!-- Renaming products for sake of automated tests -->
+                        <h3 class="product-name">PC1</h3>
+                        <!-- <h3 class="product-name">Dell PC</h3> -->
                         <div class="overlay top">
                             <h4>$350</h4>
                         </div>
@@ -204,9 +245,13 @@
                         <div class="box" style="background: 11px 15px/225px 225px url(images/PC3_$300.png) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
+                            <button class="add-cart">Add</button>
+                            <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <h3 id="product-name">Gaming PC</h3>
+                        <!-- Renaming products for sake of automated tests -->
+                        <h3 class="product-name">PC3</h3>
+                        <!-- <h3 class="product-name">Gaming PC</h3> -->
                         <div class="overlay top">
                             <h4>$300</h4>
                         </div>
@@ -218,9 +263,13 @@
                         <div class="box" style="background: 11px 15px/225px 225px url(images/Tent_$100.png) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
+                            <button class="add-cart">Add</button>
+                            <button class="remove-cart">Remove</button>
                           </div>
                         </div>
-                        <h3 id="product-name">Tent</h3>
+                        <!-- Renaming products for sake of automated tests -->
+                        <h3 class="product-name">Tent</h3>
+                        <!-- <h3 class="product-name">Tent</h3> -->
                         <div class="overlay top">
                             <h4>$100</h4>
                         </div>
