--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -22,20 +22,42 @@
             <div class="row">
                 <div class="col-xs-3 col-sm-3 col-md-3">
                     <h4>Name</h4>
-                    <div class="cart-product-name"></div>
+                    <div class="cart-product-name">
+                        <h5>Sorting Box</h5>
+                        <h5>Jeans</h5>
+                    </div>
                 </div>
                 <div class="col-xs-3 col-sm-3 col-md-3">
                     <h4>Price</h4>
-                    <div class="cart-product-price"></div>
+                    <div class="cart-product-price">
+                        <h5>$10</h5>
+                        <h5>$50</h5>
+                    </div>
                 </div>
                 <div class="col-xs-3 col-sm-3 col-md-3">
                     <h4>Quantity</h4>
-                    <div class="cart-product-quantity"></div>
+                    <div class="cart-product-quantity">
+                        <div>
+                            <h5>2</h5>
+                            <button class="add-quantity">+</button>
+                            <button class="remove-quantity">-</button>
+                        </div>
+                        <div>
+                            <h5>5</h5>
+                            <button class="add-quantity">+</button>
+                            <button class="remove-quantity">-</button>
+                        </div>
+                        
+                    </div>
                 </div>
                 <div class="col-xs-3 col-sm-3 col-md-3">
-                    <h4>Subtotal</h4>
-                    <div class="cart-product-subtotal"></div>
-                    <h4 id="cart-total">Total: </h4>
+                    <h4 id="subtotal-header">Subtotal</h4>
+                    <div class="cart-product-subtotal">
+                        <h5>$20</h5>
+                        <h5>$250</h5>
+                    </div>
+                    <hr id="total-divider">
+                    <h4 id="cart-total">Total:&nbsp;&nbsp;$270</h4>
                     <button type="button" class="btn show-cart" id="cart-checkout">
                         <h4>Checkout</h4>
                     </button> 
