--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -101,7 +101,7 @@
                         </div>
                         <h3 class="product-name">Sorting Box</h3>
                         <div class="overlay top">
-                            <h4>$10</h4>
+                            <h4>Price pending</h4>
                         </div>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                         </div>
                         <h3 class="product-name">Colored Box</h3>
                         <div class="overlay top">
-                            <h4>$5</h4>
+                            <h4>Price pending</h4>
                         </div>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                         </div>
                         <h3 class="product-name">Shirt</h3>
                         <div class="overlay top">
-                            <h4>$30</h4>
+                            <h4>Price pending</h4>
                         </div>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                         </div>
                         <h3 class="product-name">Dress</h3>
                         <div class="overlay top">
-                            <h4>$20</h4>
+                            <h4>Price pending</h4>
                         </div>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
                         </div>
                         <h3 class="product-name">Jeans</h3>
                         <div class="overlay top">
-                            <h4>$50</h4>
+                            <h4>Price pending</h4>
                         </div>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                         </div>
                         <h3 class="product-name">Keyboard</h3>
                         <div class="overlay top">
-                            <h4>$20</h4>
+                            <h4>Price pending</h4>
                         </div>
                     </div>
                 </div>
@@ -201,7 +201,7 @@
                         </div>
                         <h3 class="product-name">Mouse</h3>
                         <div class="overlay top">
-                            <h4>$20</h4>
+                            <h4>Price pending</h4>
                         </div>
                     </div>
                 </div>
@@ -217,7 +217,7 @@
                         </div>
                         <h3 class="product-name">Keyboard &amp; Mouse</h3>
                         <div class="overlay top">
-                            <h4>$40</h4>
+                            <h4>Price pending</h4>
                         </div>
                     </div>
                 </div>
@@ -233,7 +233,7 @@
                         </div>
                         <h3 class="product-name">Refurbished PC</h3>
                         <div class="overlay top">
-                            <h4>$400</h4>
+                            <h4>Price pending</h4>
                         </div>
                     </div>
                 </div>
@@ -251,7 +251,7 @@
                         </div>
                         <h3 class="product-name">Dell PC</h3>
                         <div class="overlay top">
-                            <h4>$350</h4>
+                            <h4>Price pending</h4>
                         </div>
                     </div>
                 </div>
@@ -267,7 +267,7 @@
                         </div>
                         <h3 class="product-name">Gaming PC</h3>
                         <div class="overlay top">
-                            <h4>$300</h4>
+                            <h4>Price pending</h4>
                         </div>
                     </div>
                 </div>
@@ -283,7 +283,7 @@
                         </div>
                         <h3 class="product-name">Tent</h3>
                         <div class="overlay top">
-                            <h4>$100</h4>
+                            <h4>Price pending</h4>
                         </div>
                     </div>
                 </div>
