--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -92,7 +92,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url(images/Box1_$10.png) no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -108,7 +108,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url(images/Box2_$5.png) no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -124,7 +124,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url(images/Clothes2_$30.png) no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -142,7 +142,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url(images/Clothes1_$20.png) no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -158,7 +158,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url(images/Jeans_$50.png) no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -174,7 +174,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url(images/Keyboard_$20.png) no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -192,7 +192,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url(images/Mice_$20.png) no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -208,7 +208,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url(images/KeyboardCombo_$40.png) no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -224,7 +224,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url(images/PC2_$400.png) no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -242,7 +242,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url(images/PC1_$350.png) no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -258,7 +258,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url(images/PC3_$300.png) no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -274,7 +274,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url(images/Tent_$100.png) no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
