--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <link rel="stylesheet" href="css/products.css" type="text/css">
     <link rel="stylesheet" href="css/modal.css" type="text/css">
+    <link rel="stylesheet" href="css/spinner.css" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="js/cart.js"></script>
     <script src="js/eventHandlers.js"></script>
@@ -87,12 +88,11 @@
                     <h4>Supplies</h4></button>
             </div>
         </div>
-
         <div id="productList" class="col-xs-6 col-sm-6 col-md-10">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url(images/spin.gif) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -108,7 +108,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url(images/spin.gif) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -124,7 +124,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url(images/spin.gif) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -142,7 +142,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url(images/spin.gif) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -158,7 +158,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url(images/spin.gif) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -174,7 +174,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url(images/spin.gif) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -192,7 +192,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url(images/spin.gif) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -208,7 +208,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url(images/spin.gif) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -224,7 +224,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url(images/spin.gif) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -242,7 +242,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url(images/spin.gif) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -258,7 +258,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url(images/spin.gif) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
@@ -274,7 +274,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail product">
-                        <div class="box" style="background: 11px 0px/225px 225px url() no-repeat;">
+                        <div class="box" style="background: 11px 0px/225px 225px url(images/spin.gif) no-repeat;">
                           <div class="cart-overlay">
                             <span class="cart"><img src="images/cart.png"></span>
                             <button class="add-cart">Add</button>
